Updated form for create book

--- a/views/createBook.ejs
+++ b/views/createBook.ejs
@@ -1,11 +1,9 @@
-
-    <h1>Book</h1>
-
+<h1>Book</h1>
 
 <body>
     <div class="createBook">
         <form action="/book/create" method="POST">
-            <label for="bookISBN">ISBN:</label>
+            <label for="bookISBN">bookISBN:</label>
             <input type="text" id="bookISBN" name="bookISBN" required>
             <br>
             <label for="bookName">Book Title:</label>
