Updated the labels for the form

--- a/views/createUser.ejs
+++ b/views/createUser.ejs
@@ -18,13 +18,13 @@
             <label for="userStreet">Address:</label>
             <input type="text" id="userStreet" name="userStreet" required>
             <br>
-            <label for="userCity">Author:</label>
+            <label for="userCity">City:</label>
             <input type="text" id="userCity" name="userCity" required>
             <br>
-            <label for="userState">Genre:</label>
+            <label for="userState">State:</label>
             <input type="text" id="userState" name="userState" required>
             <br>
-            <label for="userZip">Publisher:</label>
+            <label for="userZip">Zip Code:</label>
             <input type="text" id="userZip" name="userZip" required>
             <br>          
             <button>Create Book</button>
