Basic Shopping Cart Implementation
Added some views, routes, and functions for basic creation of multiple shopping carts

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,3 +2,4 @@
 <a href="book/create"><button>Create Book</button></a>
 <a href="author/create"><button>Create Author</button></a>
 <a href="user/create"><button>Create User</button></a>
+<a href="cart/home"><button>Shopping Cart</button></a>
