Updated to add feature functionality

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,37 @@
 <h1>Welcome to our Bookstore!</h1>
-<a href="book/create"><button>Create Book</button></a>
-<a href="author/create"><button>Create Author</button></a>
-<a href="user/create"><button>Create User</button></a>
-<a href="cart/home"><button>Shopping Cart</button></a>
+<ol>
+    <h3>Book Browsing and Sorting</h3>
+        <li>book/view/genre/</li>
+        <li><a href="book/view/top"><button>Get by ISBN</button></a></li>
+        <li>book/view/rating/</li>
+        <li></li>
+</ol>
+<ol>
+    <h3>Profile Management</h3>
+        <li><a href="user/create"><button>Create User</button></a></li>
+        <li>user/get/</li>
+        <li><a href="user/update"><button>Update User</button></a></li>
+        <li></li>
+</ol>
+<ol>
+    <h3>Shopping Cart</h3>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+</ol>
+<ol>
+    <h3>Book Details</h3>
+        <li><a href="book/create"><button>Create Book</button></a></li>
+        <li>book/view/ISBN/</li>
+        <li><a href="author/create"><button>Create Author</button></a></li>
+        <li></li>
+</ol>
+<ol>
+    <h3>Book Rating and Commenting</h3>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+</ol>
+<input><a href="book/view/ISBN"><button>Go</button></a>
