--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <ol>
     <h3>Book Browsing and Sorting</h3>
         <li>book/view/genre/</li>
-        <li><a href="book/view/top"><button>Get by ISBN</button></a></li>
+        <li><a href="book/view/top"><button>Top Sellets</button></a></li>
         <li>book/view/rating/</li>
         <li></li>
 </ol>
