--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <ol>
     <h3>Book Browsing and Sorting</h3>
         <li>book/view/genre/</li>
-        <li><a href="book/view/top"><button>Top Sellers</button></a></li>
+        <li><a href="book/view/top"><button>Top Sellets</button></a></li>
         <li>book/view/rating/</li>
         <li></li>
 </ol>
@@ -31,7 +31,7 @@
     <h3>Book Rating and Commenting</h3>
         <li></li>
         <li></li>
-        <li></li>
+        <li><a href="rating/view/sortByRating"><button>List of User </button></a></li>
         <li></li>
 </ol>
-<input><a href="book/view/ISBN"><button>Go</button></a>
+<!-- <input><a href="book/view/ISBN"><button>Go</button></a> -->
