user created comments with datestamp

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,9 +29,9 @@
 </ol>
 <ol>
     <h3>Book Rating and Commenting</h3>
-        <li></li>
-        <li></li>
-        <li><a href="rating/view/sortByRating"><button>List of User </button></a></li>
+        <li><a href="rating/find/bookName/"><button> Find Book Rating </button></a></li>
+        <li><a href="rating/create"><button>Create Rating</button></a></li>
+        <li><a href="rating/view/sortByRating"><button> All Ratings </button></a></li>
         <li></li>
 </ol>
 <!-- <input><a href="book/view/ISBN"><button>Go</button></a> -->
