Added Rate a Book.ejs and Updated home.ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,7 @@
 </ol>
 <ol>
     <h3>Shopping Cart</h3>
-        <li></li>
+        <li><a href="user/addToCart"><button>Add a book to cart</button></a></li>
         <li></li>
         <li></li>
         <li></li>
@@ -29,8 +29,8 @@
 </ol>
 <ol>
     <h3>Book Rating and Commenting</h3>
-        <li><a href="rating/find/bookName/"><button> Find Book Rating </button></a></li>
-        <li><a href="rating/create"><button>Create Rating</button></a></li>
-        <li><a href="rating/view/sortByRating"><button> All Ratings </button></a></li>
+        <li><a href="book/rateBook"><button>Rate a Book </button></a></li>
+        <li><a href="book/averageRating"><button>View Average Ratings </button></a></li>
+        <li></li>
         <li></li>
 </ol>
