--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,7 @@
 </ol>
 <ol>
     <h3>Shopping Cart</h3>
-        <li><a href="user/addToCart"><button>Add a book to cart</button></a></li>
+        <li><a href="cart/home"><button>Access Shopping Carts</button></a></li>
         <li></li>
         <li></li>
         <li></li>
