Updated so it asks for User Email

--- a/views/RateABook.ejs
+++ b/views/RateABook.ejs
@@ -12,6 +12,9 @@
             <label for="bookComment">Comment:</label>
             <input type="text" id="bookComment" name="bookComment" required> 
             <br>
+            <label for="ratingUser">Email:</label>
+            <input type="text" id="ratingUser" name="ratingUser" required> 
+            <br>
             <button>Rate Book</button>
         </form>
     </div>
