--- a/views/createUser.ejs
+++ b/views/createUser.ejs
@@ -13,7 +13,7 @@
             <input type="text" id="userEmail" name="userEmail" required>
             <br>
             <label for="userPassword">Password:</label>
-            <input type="text" id="userPassword" name="userPassword" required>
+            <input type="password" id="userPassword" name="userPassword" required>
             <br>
             <label for="userStreet">Address:</label>
             <input type="text" id="userStreet" name="userStreet" required>
