Added more genres

--- a/views/viewByGenre.ejs
+++ b/views/viewByGenre.ejs
@@ -5,5 +5,7 @@
         <li><a href="genre/Action"><button>Action</button></a></li>
         <li><a href="genre/Educational"><button>Educational</button></a></li>
         <li><a href="genre/Fiction"><button>Fiction</button></a></li>
+        <li><a href="genre/Fantasy"><button>Fantasy</button></a></li>
+        <li><a href="genre/Thriller"><button>Thriller</button></a></li>
     </div>
 </body>
