--- a/views/createUser.ejs
+++ b/views/createUser.ejs
@@ -27,7 +27,7 @@
             <label for="userZip">Zip Code:</label>
             <input type="text" id="userZip" name="userZip" required>
             <br>          
-            <button>Create Book</button>
+            <button>Create User</button>
         </form>
     </div>
 </body>
