Final home with all routes and functionalities

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,14 +4,14 @@
         <li><a href="book/view/genre"><button>View By Genre</button></a></li>
         <li><a href="book/view/top"><button>Top Sellers</button></a></li>
         <li><a href="book/view/rating"><button>View By Rating</button></a></li>
-        <li></li>
+        <li>/book/view/number/</li>
 </ol>
 <ol>
     <h3>Profile Management</h3>
         <li><a href="user/create"><button>Create User</button></a></li>
-        <li>user/get/</li>
+        <li>/user/get/</li>
         <li><a href="user/update"><button>Update User</button></a></li>
-        <li></li>
+        <li><a href="user/addCC"><button>Add Credit Card</button></a></li>
 </ol>
 <ol>
     <h3>Shopping Cart</h3>
@@ -23,14 +23,14 @@
 <ol>
     <h3>Book Details</h3>
         <li><a href="book/create"><button>Create Book</button></a></li>
-        <li>book/view/ISBN/</li>
+        <li>/book/view/ISBN/</li>
         <li><a href="author/create"><button>Create Author</button></a></li>
-        <li></li>
+        <li>/book/view/author/</li>
 </ol>
 <ol>
     <h3>Book Rating and Commenting</h3>
         <li><a href="book/rateBook"><button>Rate a Book </button></a></li>
+        <li><a href="book/rateBook"><button>Comment on Book </button></a></li>
+        <li>book/view/sortByRating/</li>
         <li><a href="book/averageRating"><button>View Average Ratings </button></a></li>
-        <li></li>
-        <li></li>
 </ol>
