Update author first and last name

--- a/views/createAuthor.ejs
+++ b/views/createAuthor.ejs
@@ -4,8 +4,11 @@
 <body>
     <div class="createAuthor">
         <form action="/author/create" method="POST">
-            <label for="authorName">Author Full Name:</label>
-            <input type="text" id="authorName" name="authorName" required>
+            <label for="authorFirst">Author First Name:</label>
+            <input type="text" id="authorFirst" name="authorFirst" required>
+            <br>
+            <label for="authorLast">Author Last Name:</label>
+            <input type="text" id="authorLast" name="authorLast" required>
             <br>
             <label for="authorBiography">Author Biography:</label>
             <input type="text" id="authorBiography" name="authorBiography" required>
