--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,6 +31,6 @@
     <h3>Book Rating and Commenting</h3>
         <li><a href="book/rateBook"><button>Rate a Book </button></a></li>
         <li><a href="book/rateBook"><button>Comment on Book </button></a></li>
-        <li>book/view/sortByRating/</li>
+        <li>/book/view/sortByRating/</li>
         <li><a href="book/averageRating"><button>View Average Ratings </button></a></li>
 </ol>
