Password to CVV

--- a/views/createCC.ejs
+++ b/views/createCC.ejs
@@ -15,7 +15,7 @@
             <label for="userCCExpYear">Expration Year:</label>
             <input type="text" id="userCCExpYear" name="userCCExpYear" required>
             <br>
-            <label for="userCCSecurity">Password:</label>
+            <label for="userCCSecurity">CVV:</label>
             <input type="text" id="userCCSecurity" name="userCCSecurity" required>
             <br>      
             <button>Add Credit Card</button>
