Update user placeholder

--- a/views/updateUser.ejs
+++ b/views/updateUser.ejs
@@ -4,16 +4,16 @@
 <div class="updateUser">
         <form action="/user/update" method="POST">
         <label for="userEmail">Please enter your existing Email:</label>
-        <input type="text" id="userEmail" name="userEmail" required>
+        <input type="text" placeholder="User Email" id="userEmail" name="userEmail" required>
         <br>
         <label for="userFirst">First Name:</label>
-        <input type="text" id="userFirst" name="userFirst">
+        <input type="text" placeholder="First Name" id="userFirst" name="userFirst">
         <br>
         <label for="userLast">Last Name:</label>
         <input type="text" placeholder="Last name" id="userLast" name="userLast">
         <br>
         <label for="userPassword">Password:</label>
-        <input type="text" placeholder="userPassword" id="userPassword" name="userPassword">
+        <input type="text" placeholder="Password" id="userPassword" name="userPassword">
         <br>
         <label for="userStreet">Address:</label>
         <input type="text" placeholder="Address" id="userStreet" name="userStreet">
