--- a/views/cartView.ejs
+++ b/views/cartView.ejs
@@ -49,6 +49,13 @@
 				</tr>
 				<% } %>
 			</table>
+			<br>
+			<!-- View Raw Json --->
+			<form action="" method="GET">
+				<!---<input type="hidden" id="user_email" name="user_email" value=<%= user_id %>>--->
+				<input type="hidden" id="raw_json" name="raw_json" value=true>
+				<button><small>View Raw</small></button>
+			</form>
 		<% } else { %>
 			<p>There are currently no books in your cart</p>
 		<% } %>
